<resources>
    <string name="app_name">Tomate</string>
    <string name="zero">00:00</string>
    <string name="title_activity_settings">Settings</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="init_pomodoro">Pomodoro</string>
    <string name="init_shortbreak">Intervalo curto</string>
    <string name="init_longbreak">Intervalor longo</string>
    <string name="msg_init_pomodoro">Gostaria de iniciar o pomodoro?</string>
    <string name="msg_init_shortbreak">Gostaria de iniciar o intervalo curto?</string>
    <string name="msg_init_longbreak">Gostaria de iniciar o intervalo longo?</string>
    <string name="msg_end">Parabéns, você finalizou!</string>
    <string name="your_pomodoro">Seu pomodoro terá</string>
    <string name="your_shortbreak">Seu intervalo curto terá</string>
    <string name="your_longbreak">Seu intervalo longo terá</string>
    <string name="you_will_have">Voce terá</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="quantidade_de_ciclos">Quantidade de ciclos:</string>
    <string name="duracao_do_ciclo">Duração do ciclo:</string>
    <string name="intervalo_curto">Intervalo curto:</string>
    <string name="intervalo_longo">Intervalo longo:</string>
    <string name="button_ring_test_alarm">PLAY</string>
    <string name="valor_quantidade_de_ciclos">0</string>
    <string name="valor_duracao_do_ciclo">0</string>
    <string name="valor_intervalo_curto">0</string>
    <string name="valor_intervalo_longo">0</string>
    <string name="text_minutos">minutos</string>
    <string name="text_minuto">minuto</string>
    <string name="text_ciclos">ciclos</string>
    <string name="text_ciclo">ciclo</string>
    <string name="dont_insert_zero">Insira algum valor acima de zero</string>
    <string name="alarm">Alarme:</string>
    <string name="string_button_cancel">cancelar</string>
    <string name="string_button_ok">ok</string>
    <string name="twopoints">:</string>

    <string name="hora_interv_longo">Hora do intervalo longo</string>
    <string name="hora_interv_curto">Hora do intervalo curto</string>
    <string name="hora_pomodoro">Hora do pomodoro</string>

    <string-array name="brew_array">
        <item>Alarm 1</item>
        <item>Alarm 2</item>
        <item>Alarm 3</item>
        <item>Alarm 4</item>
        <item>Alarm 5</item>
    </string-array>

    <string-array name="array_quant_ciclos">
        <item>1 ciclo</item>
        <item>2 ciclos</item>
        <item>3 ciclos</item>
        <item>4 ciclos</item>
        <item>5 ciclos</item>
        <item>6 ciclos</item>
        <item>7 ciclos</item>
        <item>8 ciclos</item>
    </string-array>

    <string-array name="array_durac_ciclos">
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
        <item>20 minutos</item>
        <item>25 minutos</item>
        <item>30 minutos</item>
        <item>35 minutos</item>
        <item>40 minutos</item>
        <item>45 minutos</item>
        <item>50 minutos</item>
    </string-array>

    <string-array name="array_interv_curto">
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
        <item>20 minutos</item>
        <item>25 minutos</item>
    </string-array>

    <string-array name="array_interv_longo">
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
        <item>20 minutos</item>
        <item>25 minutos</item>
    </string-array>

    <string name="fim_tempo">Fim do Tempo</string>
    <string name="end_short_timer_msg">Seu descanso acabou. Gostaria de iniciar outro pomodoro agora?</string>
    <string name="end_pomodoro_timer_msg">Seu pomodoro acabou. Descanse um pouco. =)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
